tests/NormalTests/paczka2/big_fuzzy/35534187.err
Error in line 11: TF' S68' 83,2
Error in line 7: ZGp S637 79,9
Error in line 21: ZGp S680 91,9
Error in line 22: ZGp A554 42,0
Error in line 23: eA9Sy5N A554 83,7
Error in line 30: A554 S680 4,3
Error in line 13: O9b S637 96,2
Error in line 42: ZGp A401 9,8
Error in line 41: eA9Sy5N S680 38,3
Error in line 37: O9b S680 14,6
Error in line 61: eA9Sy5N A401 81,5
Error in line 56: TF0 S637 92,7
Error in line 74: eA9Sy5N A554 g5,7
Error in line 82: eA9Sy5N A554 25Q,4
Error in line 93: skR S680 5P,0
Error in line 99: O9b A401 39,2
Error in line 88: TF0 A554 57,5
Error in line 103: skR S680 106,0
Error in line 127: O9b S680 -1,0
Error in line 122: O9b S680 98,3
Error in line 135: O9b S637 41,7
Error in line 131: TF0 S680 47,7
Error in line 137: eA9Sy5N A554 41,1
Error in line 156: TF0 A554 6,4
Error in line 160: TF0 S637 17,1
Error in line 173: A554 A554 66,1
Error in line 181: ZGp A554 39,6
Error in line 187: TF0 S637 61,1
Error in line 191: O9b A554 97,5
Error in line 196: TF0 A401 72,6
Error in line 194: nXqnNBG A401 13,6
Error in line 172: eA9Sy5N S637 26,3
Error in line 205: eA9Sy N S680 0,0
Error in line 206: ZGp A401 30,5
Error in line 216: A554 S680 80,2
Error in line 223: eA9Sy5N S680 55,8
Error in line 232: O9b S680 1,0
Error in line 197: TF0 A554 46,7
Error in line 236: TF0 A401 0,0
Error in line 239: A554 A554 78,2
